force-app/main/default/objects/Customer_Visit_Details__c/Customer_Visit_Details__c.object-meta.xml
<CustomObject>
    <label>Customer Visit Details</label>
    <nameField>
        <displayFormat>CVD-{000000}</displayFormat>
        <label>Customer Visit Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Visit Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>