force-app/main/default/objects/Customer_Visit_Details__c/fields/Interested_In__c.field-meta.xml
<CustomField>
    <fullName>Interested_In__c</fullName>
    <label>Interested In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interiors</fullName>
            </value>
            <value>
                <fullName>Loose Furniture</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Rental Support</fullName>
            </value>
            <value>
                <fullName>New Car</fullName>
            </value>
            <value>
                <fullName>New Bike</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>