force-app/main/default/objects/Customer_Visit_Details__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Runwal Gardens</fullName>
            </value>
            <value>
                <fullName>Runwal MyCity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>