force-app/main/default/objects/Customer_Visit_Details__c/fields/Tower_Name__c.field-meta.xml
<CustomField>
    <fullName>Tower_Name__c</fullName>
    <label>Tower Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>